--- a/source/docs/assets/css/daily.css
+++ b/source/docs/assets/css/daily.css
@@ -125,6 +125,11 @@ select, option {
   right: 25vw;
   z-index: -1;
 }
+
+.journal-frame {
+  position: relative;
+  z-index: 100;
+}
 /*----------End: Main Shared Elements----------*/
 
 /*-----------Daily Specific Items-----------*/
